graph legend: fix table alignment

--- a/public/sass/components/_panel_graph.scss
+++ b/public/sass/components/_panel_graph.scss
@@ -136,11 +136,10 @@
 }
 
 .graph-legend-table {
+  table {
+    width: 100%;
+  }
   tbody {
-    display: block;
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
     padding-bottom: 1px;
     padding-right: 5px;
     padding-left: 5px;
